--- a/package.json
+++ b/package.json
@@ -3,15 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@react-google-maps/api": "^2.19.3",
-    "concurrently": "^8.2.2",
-    "firebase": "^10.10.0",
-    "framer-motion": "^11.0.20",
-    "nodemon": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-icons": "^5.0.1",
-    "react-router-dom": "^6.22.3",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
@@ -26,8 +19,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "eject": "react-scripts eject",
-    "both": "concurrently \"npm run start\" \"nodemon ./backend/index.js \""
+    "eject": "react-scripts eject"
   },
   "eslintConfig": {
     "extends": [
@@ -48,7 +40,6 @@
     ]
   },
   "devDependencies": {
-    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.2.7"
   }
 }
